[package]
name = "ethers_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {  features = ["abigen", "rustls", "ws", "ethers-solc"] }
tokio = {  features = ["macros", "rt-multi-thread"] }
# serde
serde = "1.0"
serde_json = "1.0"

eyre = "0.6"
clap = { version = "4.4.18", features = ["derive"] }

